feat: add configurable weights to loss functions and update config
Add optional weight parameters to generator, discriminator, and feature
matching losses to allow for configurable scaling. Update reconstruction
loss to include weight parameter. Modify test configuration to use CPU
and test logging settings. Add configurable weights to loss functions
and update config

Add weight parameters to generator, discriminator, and feature matching
losses Update reconstruction loss to use configurable weight Update
config file to include loss weight settings Switch trainer to use cpu
and test logger settings

Co-authored-by: Christopher Jacoby <christopher@antarestech.com>

--- a/src/auem/configs/experiment/tests/gan_mel.yaml
+++ b/src/auem/configs/experiment/tests/gan_mel.yaml
@@ -74,14 +74,18 @@ recipe:
           configs:
             # period: [2, 3, 5, 7, 11]
             period: [4, 6]
+  loss:
+    feature:
+      weight: 1.0
+    reconstruction:
+      weight: 1.0
 
 trainer:
   fast_dev_run: false
   log_every_n_steps: 5
   check_val_every_n_epoch: 10
-  accelerator: cuda
-  devices: [0, 1, 2, 3]
+  accelerator: cpu
   logger:
-    workspace: restore
-    project: reconstruction
-    mode: create
+    workspace: test
+    project: test
+    online: False
