--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "beartype>=0.21.0",
     "lightning>=2.5.5",
     "click>=8.3.0",
+    "nnaudio>=0.3.3",
 ]
 
 [tool.uv.sources]
