build: add audio processing dependencies to traincore package
nnaudio and pedalboard are now dependencies of the traincore package,
while being removed from the root pyproject.toml to avoid duplication
and ensure proper scoping of dependencies.

--- a/packages/traincore/pyproject.toml
+++ b/packages/traincore/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "torch>=2.8.0",
     "torchaudio>=2.8.0",
     "torchvision>=0.23.0",
+    "nnaudio>=0.3.3",
+    "pedalboard>=0.9.19",
 ]
 
 [tool.ruff.lint]
